--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,11 +1,13 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" [routerLink]="['Home']">Angular 2 Demo</a>
+            <a class="navbar-brand" [routerLink]="['Home']">Plone</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a [routerLink]="['Home']">Home</a></li>
-            <li><a [routerLink]="['Email']">User Email</a></li>
+            <li><a [routerLink]="['Home']">Home</a></li>
+            <li><a [routerLink]="['News']">News</a></li>
+            <li><a [routerLink]="['Events']">Events</a></li>
+            <li><a [routerLink]="['MyFolder']">My Folder</a></li>
         </ul>
     </div>
 </nav>
