Using Route param for sub folders

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -7,7 +7,7 @@
             <li><a [routerLink]="['Home']">Home</a></li>
             <li><a [routerLink]="['News']">News</a></li>
             <li><a [routerLink]="['Events']">Events</a></li>
-            <li><a [routerLink]="['MyFolder']">My Folder</a></li>
+            <li><a [routerLink]="['MyFolder',{value:''}]">My Folder</a></li>
         </ul>
     </div>
 </nav>
